--- a/src/components/Dates/Dates.css
+++ b/src/components/Dates/Dates.css
@@ -36,7 +36,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 1rem;
 }
 
 .tour-title {
