--- a/src/components/Faq/Faq.css
+++ b/src/components/Faq/Faq.css
@@ -21,7 +21,7 @@ body {
     width: 100%;
     height: auto;
     margin-top: 1rem;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
 }
 
 .faq-accordion {
